--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -23,8 +23,8 @@
 
 .about .card-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    margin: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 2rem;
     column-gap: 1rem;
     row-gap: 1rem;
 }
@@ -65,11 +65,24 @@
 .about .icon {
     font-size: 2rem;
     color: #333;
+    
+    
+    
+}
+
+.about .icon text{
+    margin-bottom: 1rem;
 }
 
 .about .btn {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 1rem;
+    width: 100px;
+    height: 35px;
+    border-radius: 15px ;
+    background: var(--color-primary-variant);
 }
 
 @media screen and (max-width:940px) {
