--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,74 +1,149 @@
-.navbar {
+nav{
+    height: 5rem ;
     width: 100%;
-    height: 90px;
-    background-color: #000;
+    background: black;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    
 }
 
-.navbar .container {
-    max-width: 1140px;
-    height: 100%;
-    margin: auto;
+.nav__toggle-btn{
+    display: none;
+    
+}
+
+.nav__container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+
 }
 
-.navbar .nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.navbar li {
-    padding: 1rem;
-}
-
-.hamburger {
-    display: none;
-}
-
-
-.nav-img{
-    margin-left: 0.1rem;
+.logo{ 
+    margin-right: 15rem;
     display: block;
     object-fit: cover;
-width: 13%;
     opacity: 0.8;
     border-radius: 35px;
-  }
-
-.navbar .icon {
-    color: #f4eeff;
-    font-size: 2rem;
+    
 }
 
-.navbar h1,a {
-    color: #f4eeff;
+.nav__img{
+    width: 100px ;
 }
 
-@media screen and (max-width:940px) {
-    .hamburger {
-        display: block;
+.nav__links{
+    display: flex;
+    gap: 3.5rem;
+}
+
+.nav__links a{
+    transition: var(--transition);
+}
+
+.nav__links a:hover{
+    color: var(--color-primary);
+}
+
+.active-nav{
+    position: relative;
+}
+
+.active-nav::after{
+    content: '';
+    display: block;
+    width: 1.2rem;
+    height: 1.2rem;
+    background:var(--color-primary);
+    position: absolute;
+    left: calc(50%- 0.6rem);
+    transform: rotate(45deg);
+    margin-top: 0.9rem;
+}
+
+@media screen and (max-width: 1024px) {
+    .nav__toggle-btn{
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        cursor: pointer;
     }
 
-    .nav {
+    .nav__toggle-btn svg {
+       color: var(--color-gray-100);
+       
+    }
+
+    .nav__links{
         position: absolute;
+        top: 100%;
+        right: 0;
         flex-direction: column;
-        justify-content: start!important;
-        top: 90px;
-        left: -100%;
+        gap: 0;
+        perspective: 400px;
+    }
+    
+    .active-nav, .active-nav::after{
+        display: none;
+    }
+
+    .nav__links li {
+        height: 4rem;
         width: 100%;
-        height: 100vh;
-        background-color: #000;
-        transition: 0.3s;
+        box-shadow: 2rem 2rem 5rem rgba(0, 0, 0, 0.4) ;
+        animation: navAnimation 600ms ease forwards;
+        transform: rotateX('90deg');
+        opacity: 0;
+        transform-origin: top;
     }
 
-    .nav.active {
-        left: 0;
+    .nav__links li:nth-child(2){
+        animation-delay: 200ms;
     }
 
-    .nav a {
-        font-size: 1.4rem;
+    .nav__links li:nth-child(3){
+        animation-delay: 400ms;
     }
 
+    .nav__links li:nth-child(4){
+        animation-delay: 600ms;
+    }
+
+    .nav__links li:nth-child(5){
+        animation-delay: 800ms;
+    }
+    .nav__links li:nth-child(6){
+        animation-delay: 1s;
+    }
+ 
+
+    @keyframes navAnimation {
+        to {
+           transform: rotateX(0); 
+           opacity: 1;
+        }
+        
+    }
+
+    .nav__links li a {
+        background-color: var(--color-primary);
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 1rem 5rem 1rem 3rem;
+    }
+
+    .show__nav{
+        display: flex;
+    }
+
+    .hide__nav{
+        display: none;
+    }
 }
