refactor:installed react carousel

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,6 +3,7 @@
     height: 100vh;
     position: relative;
     background: rgba(0,0,0,.5);
+    margin-bottom: 5rem;
 }
 
 .contact:before {
@@ -31,7 +32,7 @@
 
 .contact form p{
     color: red;
-    font-size: small;
+font-size: medium;
 }
 
 .contact .form-container div {
