--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,86 @@
-footer{
+.footer {
+    width: 100%;
+    background-color: #000;
+    color: #f8f8f8;
+    padding: 4rem 0;
+    text-align: center;
+}
+
+.footer .container {
+    max-width: 1140px;
+    margin: auto;
+    display: grid;
+    padding: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.footer h4 {
+    display: inline-block;
+    border-bottom: 3px solid var(--color-primary);
+    padding-bottom: .2rem;
+}
+
+.footer-img{
+    display: inline-block;
+    border-radius: 35px;
+    height: 60px;
+    width: 120px;
+    margin-right: 70px;
+    
+    
+}
+
+.footer__socials{
+    margin-top: 1.5rem;
+    margin: 2rem ;  
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  
+  .footer__socials a{
+      background: var(--color-gray-100) ;
+      padding: 0.7rem;
+      border: 1px solid transparent;
+      border-radius: 0.6rem ;
+      transition: var(--transition);
+  }
+
+  .footer__socials a svg{
+    color: var(--color-gray-600);
+
+}
+
+.footer__socials a:hover {
+    border-color: var(--color-gray-100) ;
+    background: transparent;
+}
+
+.footer .col p {
+    margin: 1rem 0;
+}
+
+.footer__copyright{
+    color: var(--color-gray-100);
+    text-align: center;
+    padding: 1.5rem 0;
+    border-top: 2px solid var(--color-primary-variant);
+    margin-top: 5rem;
+}
+
+@media screen and (max-width: 940px) {
+    .footer .container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .footer h4 {
+        margin-top: 2rem;
+    }
+}
+
+
+
+/* footer{
     background:  rgb(6, 2, 8);
     margin-top: 7rem;
     padding-top: 7rem;
@@ -33,7 +115,7 @@ footer{
     margin-top: 0.5rem;
     /* transform: scale(1.3);
     z-index: 1 ; */
-}
+/* }
 
 .footer__container article h4{
     margin: 2rem ;
@@ -88,5 +170,5 @@ footer{
     .footer h4 {
         margin-top: 2rem;
     }
-}
+} */ 
 
