--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,110 @@
-nav{
+.navbar {
+    width: 100%;
+    height: 90px;
+    background-color: #000;
+}
+
+.navbar .container {
+    max-width: 1140px;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{ 
+    margin-right: 15rem;
+    display: block;
+    object-fit: cover;
+    opacity: 0.8;
+    border-radius: 35px;
+    height: 50px;
+    
+}
+
+.navbar .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar li {
+    padding: 1rem;
+    
+}
+
+.hamburger {
+    display: none;
+}
+
+.navbar .icon {
+    color: #f4eeff;
+    font-size: 2rem;
+}
+
+.navbar h1,a {
+    color: #f4eeff;
+}
+
+@media screen and (max-width:940px) {
+    .hamburger {
+        display: block;
+    }
+
+    .nav li{
+        display: flex;
+        gap: 3.5rem;
+    }
+    
+    .nav li a{
+        transition: var(--transition);
+    }
+    
+    .nav li a:hover{
+        color: var(--color-secondary);
+    }
+
+     .nav {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        flex-direction: column;
+        gap: 0;
+        perspective: 400px;
+    } 
+
+    .nav li a {
+        background-color: var(--color-primary);
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 1rem 5rem 1rem 3rem;
+    }
+
+.nav li{
+    height: 4rem;
+    width: 100%;
+    box-shadow: 2rem 2rem 5rem rgba(0, 0, 0, 0.4) ; 
+ animation: navAnimation 600ms ease forwards;
+    transform: rotateX('90deg');
+    opacity: 0;
+    transform-origin: top; 
+} 
+
+    .nav.active {
+        display: none;
+        
+    }
+
+    .nav a {
+        font-size: 1.4rem;
+    }
+
+}
+
+/* nav{
     height: 5rem ;
     width: 100%;
     background: black;
@@ -35,11 +141,11 @@ nav{
 
 .nav__img{
     width: 100px ;
-}
+} */
 
-.nav__links{
+ .nav__links{
     display: flex;
-    gap: 3.5rem;
+    gap: 1rem;
 }
 
 .nav__links a{
@@ -48,7 +154,7 @@ nav{
 
 .nav__links a:hover{
     color: var(--color-primary);
-}
+} 
 
 .active-nav{
     position: relative;
@@ -57,7 +163,7 @@ nav{
 .active-nav::after{
     content: '';
     display: block;
-    width: 1.2rem;
+    width: 1.3rem;
     height: 1.2rem;
     background:var(--color-primary);
     position: absolute;
@@ -92,8 +198,8 @@ nav{
         display: none;
     }
 
-    .nav__links li {
-        height: 4rem;
+     .nav__links li {
+        height: 5rem;
         width: 100%;
         box-shadow: 2rem 2rem 5rem rgba(0, 0, 0, 0.4) ;
         animation: navAnimation 600ms ease forwards;
@@ -125,19 +231,19 @@ nav{
     @keyframes navAnimation {
         to {
            transform: rotateX(0); 
-           opacity: 1;
+           opacity: 9;
         }
         
     }
 
     .nav__links li a {
         background-color: var(--color-primary);
-        height: 100%;
+        height: 180%;
         width: 100%;
         display: flex;
         align-items: center;
         padding: 1rem 5rem 1rem 3rem;
-    }
+    } 
 
     .show__nav{
         display: flex;
@@ -146,4 +252,4 @@ nav{
     .hide__nav{
         display: none;
     }
-}
+} 
