--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background:rgb(6, 2, 8) ;
 }
 
 code {
@@ -56,7 +57,7 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 .container {
