--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background:rgb(6, 2, 8) ;
+background: black
+   ;
 }
 
 code {
