--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,53 +1,81 @@
-.blog-posts {
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-    background-color: rgb(6, 2, 8);
-  }
-  
-  h1 {
-    margin: 1rem auto 4rem;
-    color: var(--color-primary);
-  }
-  
-  .product--image {
-    width: 100%;
-    height: 16em;
-    object-fit: cover;
-  }
-  
-  .card {
-    box-shadow: 0 4px 8px 0 var(--color-primary);
-    color: white;
-    max-width: 320px;
-    margin: auto 1rem;
-    text-align: center;
-    font-family: arial;
-  }
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
 
-  .card:hover{
-    transform: scale(1.05);
-    transition: 0.4s ease-in-out;
-  }
-  
-  .price {
-    color: grey;
-    font-size: 22px;
-  }
-  
-  .card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: var(--color-primary);
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-  }
-  
-  .card button:hover {
-    opacity: 0.7;
+.container{
+  background: black;
+width: 100%;
+margin: auto;
 
-  }
+
+}
+.slider{
+  margin: 0 auto;
+  width: 100%;
+  height: 130px;
+  margin-bottom: 10rem;
+ ;
+}
+
+ .slide img{
+  width: 100%;
+  height: 80%;
+  border-radius: 15px;
+  gap: 1rem;
+  
+}
+
+.slide{
+  margin-bottom: 100px;
+  display: block;
+  opacity: .5 ;
+  transform: scale(.7);
+  transition: .5s;
+  filter: blur(5px);
+
+  
+}
+
+/* .slide button{
+  border-radius: 25px;
+  height: 30px;
+  
+} */
+
+.header{
+  margin: 50px;
+  text-align: center;
+  color: var(--color-primary);
+}
+
+.slide-active{
+  filter: blur(0);
+  opacity: 1;
+  transform: scale(1.1);
+  
+}
+h4{
+  color: antiquewhite;
+  margin-top: 1rem;
+}
+.arrow{
+  font-size: 30px;
+  padding: 5px 15px;
+  border-radius: 10px ;
+  box-shadow: 0 0 5px 3px var( --color-gray-100);
+  background: var( --color-primary);
+  color: var(--color-gray-100);
+  display: flex;
+  width: 50px  ;
+  position: absolute;
+  top: 100px;
+  z-index: 100;
+  cursor: pointer;
+  
+}
+
+.arrow-right{
+  right: 20px;
+}
+.arrow-left{
+  left: 20px;
+}
