refactor: created different components

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    background-color: #000;
+    background-color:black;
     color: #f8f8f8;
     padding: 4rem 0;
     text-align: center;
