--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   --color-primary:hsl(var(--primary-hue),100%, 50%);
   --color-primary-variant: hsl(var(--primary-hue), 100%, 65%);
   --color-gray-100:hsl(var(--gray-hue),47%,94%);
+  --color-gray-200:hsl(var(--gray-hue),26%,75%);
+  --color-gray-300:hsl(var(--gray-hue),24%,64%);
+  --color-gray-400:hsl(var(--gray-hue),16%,41%);
+  --color-gray-500:hsl(var(--gray-hue),44%,25%);
  --color-gray-600 :hsl(var(--gray-hue),48%,15%);
 
 
