--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -5,6 +5,7 @@
   background: black;
 width: 100%;
 margin: auto;
+margin-top: 1rem;
 
 
 }
@@ -12,12 +13,12 @@ margin: auto;
   margin: 0 auto;
   width: 100%;
   height: 130px;
-  margin-bottom: 10rem;
+
  ;
 }
 
  .slide img{
-  width: 100%;
+  width: 80%;
   height: 80%;
   border-radius: 15px;
   gap: 1rem;
