--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,13 +4,19 @@
     top: 90px;
     object-fit: contain;
     color: #f4eeff;
+
+
 }
+
+
 #video {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    /* filter:opacity(40%); */
+    
 }
 
 .hero .hero-text {
@@ -20,7 +26,24 @@
     align-items: center;
     height: 90%;
     padding: 1rem;
-    text-align: center;
+    text-align: center; 
+    margin-top: 7rem;  
+}
+
+.hero h2{
+    color: transparent;
+    font-size: 100px;
+    -webkit-text-stroke: 1px white;
+    background: url(../../assets/back.png);
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation: back 20s linear infinite;
+    
+}
+@keyframes back {
+    100%{
+        background-position: 2000px 0;
+    }
 }
 
 .hero p {
@@ -34,5 +57,5 @@
 .bottom-text h2 {
     font-size: 1.6rem;
     text-align: center;
+    
 }
-
