--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -1,26 +1,68 @@
-.counter-wrapper{
+.counter-up{
+    background: black;
+    margin-top: 4rem;
+    min-height: 50vh;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 0 50px;
+    position: relative;
     display: flex;
     align-items: center;
+}
+.counter-up::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.8);
+}
+
+.counter-up .content{
+    z-index: 1;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: space-between;
-}
-
-.counter-item{
-    width: 33%;
-    text-align: center;
-}
-
-.counter-number .counter-title{
-   background: var(--color-primary-variant); 
-   background-size: 100% 100%;
-   background-clip: text;
-   -webkit-text-fill-color: transparent;
-}
-
-.counter-number{
-    font-size: 2.5rem;
-    margin-bottom:1rem;
-}
-
-.counter-title{
-    font-size: 1.5rem;
-}
+  }
+  .counter-up .content .box{
+    border: 1px dashed rgba(255,255,255,0.6);
+    width: calc(25% - 30px);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding: 20px;
+  }
+  .content .box .icon{
+    font-size: 48px;
+    color: #e6e6e6;
+  }
+  .content .box .counter{
+    font-size: 50px;
+    font-weight: 500;
+    color: #f2f2f2;
+    font-family: sans-serif;
+  }
+  .content .box .text{
+    font-weight: 400;
+    color: #ccc;
+  }
+  @media screen and (max-width: 580px) {
+    .counter-up .content .box{
+      width: 100%;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .wrapper{
+      padding: 20px;
+    }
+    .counter-up{
+      padding: 30px 20px 0 20px;
+    }
+  }
