--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,23 +1,82 @@
-.main{
-    text-align: center;
-    margin-top:130px ;
-    margin-bottom: 80px;
-  }
-  .flex_row{
-    justify-content: center;
-    display: flex;
-    padding-top: 20px;
-  }
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
+
+.container{
+  background: black;
+width: 100%;
+margin: auto;
+margin-bottom: 2rem;
+
+
+}
+.slider{
+  margin: 0 auto;
+  width: 100%;
+  height: 130px;
+  margin-bottom: 8rem;
+ ;
+}
+
+ .slide img{
+  width: 60%;
+  height: 60%;
+  border-radius: 15px;
+  gap: 1rem;
   
-  h2{
-    color: white;
-    margin-top: 1rem;
-  }
+}
+
+.slide{
+  margin-bottom: 100px;
+  display: block;
+  opacity: .5 ;
+  transform: scale(.7);
+  transition: .5s;
+  filter: blur(5px);
 
   
-.thumbnail{
-  padding-left: 20px;
 }
-.clicked{
-  border: 5px solid black;
+
+/* .slide button{
+  border-radius: 25px;
+  height: 30px;
+  
+} */
+
+.header{
+  margin: 50px;
+  text-align: center;
+  color: var(--color-primary);
+}
+
+.slide-active{
+  filter: blur(0);
+  opacity: 1;
+  transform: scale(1.1);
+  
+}
+h4{
+  color: antiquewhite;
+  margin-top: 1rem;
+}
+.arrow{
+  font-size: 30px;
+  padding: 5px 15px;
+  border-radius: 10px ;
+  box-shadow: 0 0 5px 3px var( --color-gray-100);
+  background: var( --color-primary);
+  color: var(--color-gray-100);
+  display: flex;
+  width: 50px  ;
+  position: absolute;
+  top: 100px;
+  z-index: 100;
+  cursor: pointer;
+  
+}
+
+.arrow-right{
+  right: 20px;
+}
+.arrow-left{
+  left: 20px;
 }
