--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,11 +11,11 @@ nav{
     
 }
 
-.nav__toggle-btn{
+.nav-toggle-btn{
     display: none;
 }
 
-.nav__container{
+.nav-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,7 +24,7 @@ nav{
 
 }
 
-.nav__img{
+.nav-img{
     width: 7rem;
     display: block;
     margin-right: 15rem;
@@ -35,16 +35,16 @@ nav{
     
 }
 
-.nav__links{
+.nav-links{
     display: flex;
     gap: 3.5rem;
 }
 
-.nav__links a{
+.nav-links a{
     transition: var(--transition);
 }
 
-.nav__links a:hover{
+.nav-links a:hover{
     color: var(--color-primary);
 }
 
@@ -65,18 +65,18 @@ nav{
 }
 
 @media screen and (max-width: 1024px) {
-    .nav__toggle-btn{
+    .nav-toggle-btn{
         display: inline-block;
         background: transparent;
         font-size: 1.8rem;
         cursor: pointer;
     }
 
-    .nav__toggle-btn svg {
+    .nav-toggle-btn svg {
        color: var(--color-gray-100); 
     }
 
-    .nav__links{
+    .nav-links{
         position: absolute;
         top: 100%;
         right: 0;
@@ -89,7 +89,7 @@ nav{
         display: none;
     }
 
-    .nav__links li {
+    .nav-links li {
         height: 4rem;
         width: 100%;
         box-shadow: 2rem 2rem 5rem rgba(0, 0, 0, 0.4) ;
@@ -99,22 +99,22 @@ nav{
         transform-origin: top;
     }
 
-    .nav__links li:nth-child(2){
+    .nav-links li:nth-child(2){
         animation-delay: 200ms;
     }
 
-    .nav__links li:nth-child(3){
+    .nav-links li:nth-child(3){
         animation-delay: 400ms;
     }
 
-    .nav__links li:nth-child(4){
+    .nav-links li:nth-child(4){
         animation-delay: 600ms;
     }
 
-    .nav__links li:nth-child(5){
+    .nav-links li:nth-child(5){
         animation-delay: 800ms;
     }
-    .nav__links li:nth-child(6){
+    .nav-links li:nth-child(6){
         animation-delay: 1s;
     }
  
@@ -127,7 +127,7 @@ nav{
         
     }
 
-    .nav__links li a {
+    .nav-links li a {
         background-color: var(--color-primary);
         height: 100%;
         width: 100%;
@@ -136,11 +136,11 @@ nav{
         padding: 1rem 5rem 1rem 3rem;
     }
 
-    .show__nav{
+    .show-nav{
         display: flex;
     }
 
-    .hide__nav{
+    .hide-nav{
         display: none;
     }
 }
