--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -1,9 +1,9 @@
-.notFound__container{
+.notFound-container{
     text-align: center;
     padding-top: 8rem;
 }
 
-.notFound__container .btn{
+.notFound-container .btn{
     margin-top: 2rem;
     display: inline-block;
 }
