--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,10 +32,10 @@
 
 .footer__socials{
     margin-top: 1.5rem;
-    margin: 2rem ;  
+    margin-right: 3rem ;  
     display: flex;
     gap: 1rem;
-    align-items: center;
+    
   }
   
   .footer__socials a{
@@ -68,15 +68,16 @@
     margin-top: 5rem;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 1024px) {
     .footer .container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 3fr;
     }
 
     .footer h4 {
         margin-top: 2rem;
     }
 }
+
 
 
 
