refactor: fixed responsiveness on all pages

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -69,4 +69,8 @@
         background: url('../../assets/hero-image.png');
         background-size: cover;
     }
+
+    .hero h2 {
+        font-size: 60px;
+      }
 }
