--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer .container {
-    max-width: 1140px;
+    max-width: 940px;
     margin: auto;
     display: grid;
     padding: 1rem;
@@ -68,16 +68,26 @@
     margin-top: 5rem;
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 940px) {
     .footer .container {
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr;
+        text-align: center;
     }
-
-    .footer h4 {
-        margin-top: 2rem;
+    .footer-img {
+        margin: 1rem auto;
+    }
+    .footer__socials {
+        margin-top: 1.5rem;
+        margin-right: 0;
+        justify-content: center;
     }
 }
 
+.footer h4 {
+    display: inline-block;
+    border-bottom: 3px solid var(--color-primary);
+    padding-bottom: .2rem;
+}
 
 
 
