--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,14 +13,21 @@ nav{
 
 .nav-toggle-btn{
     display: none;
+    background: transparent;
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: var(--color-gray-100);
 }
 
 .nav-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    width: 100%;
     height: 90px;
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 0 1rem;
 
 }
 
@@ -64,7 +71,7 @@ nav{
     margin-top: 0.9rem;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 940px) {
     .nav-toggle-btn{
         display: inline-block;
         background: transparent;
