--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -25,18 +25,21 @@
     width: 25%;
     background-color: var(--color-primary);
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 
 }
 
-.team-img{
+.team-image{
     width: 100%;
     height: 200px;
     border-radius: 5px;
     background: white;
     overflow: hidden;
+    margin-bottom: 1rem;
 }
 
-.team-img img{
+.team-image img{
     width: 100%;
     height: 200px;
     object-fit: contain;
@@ -56,7 +59,6 @@
 .team-member-social{
     display: flex;
     align-items: center;
-    column-gap: 1rem;
     margin-top: 10px ;
 }
 
@@ -76,27 +78,12 @@ h2{
     display: flex ;
     align-items: center;
     column-gap: 1rem;
+    margin-bottom: 2rem;
 }
 
-@media screen and (max-width:940px) {
-    .about .container {
-        grid-template-columns: 1fr;
-    }
-
-    .about .container {
+@media screen and (max-width: 940px) {
+    .team-item {
         width: 100%;
-    }
-
-    .about .container img {
-        padding: 0rem;
-        width: 90vw;
-    }
-
-    .about .container .col-2 {
-        padding: 0;
-    }
-
-    .about button {
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
 }
