--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -30,7 +30,46 @@
     margin-top: -4rem;
 }
 
-.contact form p{
+@media (max-width: 767px) {
+    .contact form {
+      width: 90%;
+    }
+  }
+  
+  .contact form p{
+      color: red;
+      font-size: medium;
+  }
+
+  .contact .form-container div {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact form label {
+    margin: 2rem 0 .7rem 0;
+    display: none;
+}
+
+.contact form input, textarea {
+    padding: .5rem;
+    font-size: 1.2rem;
+    color: #f8f8f8;
+    margin: 1rem 0;
+    font-family: 'Roboto', sans-serif;
+    background: rgba(0, 0, 0, .15);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, .15);
+}
+
+.contact form input:focus, textarea:focus {
+    outline: var(--focus-outline);
+    background: rgba(0, 0, 0, .25);
+}
+
+/* .contact form p{
     color: red;
 font-size: medium;
 }
@@ -70,4 +109,4 @@ font-size: medium;
     }
 }
 
-
+ */
